--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
@@ -22,11 +21,12 @@
   <body>
     <div class="relativeItem card">
       <button class="open-button" onclick="openForm()">
-        <i class="fa-brands fa-rocketchat"></i>
+        <i class="fa-solid fa-message"></i>
       </button>
       <div class="chat-popup" id="myForm">
         <div class="container">
           <div class="closeicon" onclick="closeForm()">
+            <image src="./icons/logo.png" alt="Bagisto Logo" width="96" />
             <i class="fa-solid fa-xmark"></i>
           </div>
           <!-- Chats container -->
@@ -71,11 +71,6 @@
                   >
                     <i class="fa-solid fa-paper-plane"></i>
                   </button>
-                </div>
-                <div class="typing-controls">
-                  <span id="delete-btn" class="material-symbols-rounded"
-                    ><i class="fa-solid fa-trash"></i
-                  ></span>
                 </div>
               </div>
             </div>
