added fav icon and https url

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>ChatBot</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" type="image/png" href="/icons/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Google Fonts Link For Icons -->
     <link
