fix: broken url

--- a/demo.html
+++ b/demo.html
@@ -22,7 +22,7 @@
     <script
       type="text/javascript"
       async
-      src="https://vikastiwari-webkul.github.io/ai-chatbot.github.io/frame.js"
+      src="https://vikastiwari-webkul.github.io/ai-chatbot.github.io/chatbot.js"
     ></script>
   </body>
 </html>
