fix: broken url

--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
   <head>
     <style></style>
     <!--Embed Code starts-->
-    <!-- <script type="text/javascript" async src="https://vikastiwari-webkul.github.io/ai-chatbot.github.io/frame.js"></script> -->
+    <!-- <script type="text/javascript" async src="https://vikastiwari-webkul.github.io/ai-chatbot/frame.js"></script> -->
     <!--Embed Code ends-->
   </head>
   <body>
@@ -22,7 +22,7 @@
     <script
       type="text/javascript"
       async
-      src="https://vikastiwari-webkul.github.io/ai-chatbot.github.io/chatbot.js"
+      src="https://vikastiwari-webkul.github.io/ai-chatbot/chatbot.js"
     ></script>
   </body>
 </html>
