added favicon to demo page

--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style></style>
+    <meta charset="utf-8" />
+    <title>AI ChatBot</title>
+    <link rel="icon" type="image/png" href="/src/icons/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google Fonts Link For Icons -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <!--Embed Code starts-->
     <!-- <script type="text/javascript" async src="https://vikastiwari-webkul.github.io/ai-chatbot/frame.js"></script> -->
     <!--Embed Code ends-->
