--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>ChatBot</title>
+    <title>AI ChatBot</title>
     <link rel="stylesheet" href="./styles.css" />
     <link rel="icon" type="image/png" href="/icons/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
