fixed: broken link of favicon

--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>AI ChatBot</title>
-    <link rel="icon" type="image/png" href="/src/icons/favicon.ico" />
+    <link rel="icon" type="image/png" href="./src/icons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Google Fonts Link For Icons -->
     <link
