feat: added custom logo

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
       <div class="chat-popup" id="chat-popup">
         <div class="container">
           <div class="closeicon" onclick="closeForm()">
-            <image src="./icons/logo.png" alt="Bagisto Logo" width="96" />
+            <image src="./icons/logo.png" id="chatbot-logo" alt="Bagisto Logo" width="96" />
             <i class="fa-solid fa-xmark"></i>
           </div>
           <!-- Chats container -->
