--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <link rel="icon" type="image/png" href="./icons/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <!-- Google Fonts Link For Icons -->
     <link
       rel="stylesheet"
