feat: welcome note | fix : unwanted variable removed

--- a/demo.html
+++ b/demo.html
@@ -28,7 +28,8 @@
       logoUrl: "logo-url",
       appName:'chat-bot title',
       imageAlt:'logo alt title',
-      chatBotIcon:'chat bot icon'
+      chatBotIcon:'chat bot icon',
+      welcomeNote:'welcome message'
     };
   </script>
   <script type="text/javascript" async src='./chatbot.js'></script>
