--- a/demo.html
+++ b/demo.html
@@ -27,7 +27,7 @@
     <script
       type="text/javascript"
       async
-      src="https://vikastiwari-webkul.github.io/ai-chatbot/chatbot.js"
+      src="https://bagisto.github.io/ai-chatbot/chatbot.js"
     ></script>
   </body>
 </html>
