Update body and html styles to transparent

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html style="background-color: transparent !important; background: transparent !important;" lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
     <title>AI ChatBot</title>
@@ -20,7 +20,10 @@
     />
     <script src="./script.js" defer></script>
   </head>
-  <body>
+  <body style="background-color: transparent !important; background: transparent !important;">
+
+<!-- Chat Bot -->
+  <div class="chatbot-widget">
     <div class="relativeItem card">
       <button class="open-button" onclick="openForm()">
         <i class="fa-solid fa-message"></i>
@@ -63,5 +66,6 @@
         </div>
       </div>
     </div>
+  </div>
   </body>
 </html>
